# emerald-themes

./: ChangeLog  Makefile.am  NEWS  README.md  VERSION  autogen.sh  blue_satin.emerald  configure.ac  emerald-themes.spec
debian/: changelog  control  rules
themes/: Adonis.emerald  Adonis_Mod.emerald  Ambiance.emerald  Ambiance_Ubuntu.emerald  Beryl_Clean.emerald  Beryl_Default.emerald  BlackLine.emerald  Blue_Planet.emerald  Blue_Satin.emerald  Blue_Submarine.emerald  ButtonLess.emerald  Canopy.emerald  Compiz-Gilouche.emerald  Cross-Eyed-Fish.emerald  Crystal-ICE.emerald  Dark_Blue.emerald  Eternal.emerald  Fadeout.emerald  Fayal.emerald  Fogo.emerald  Fogo_Monochrome.emerald  Green_Submarine.emerald  Greenhouse_Effect.emerald  Iridescence.emerald  JAGT.emerald  Komar-Blue.emerald  LimeRefresh.emerald  Mac4Lin_Aqua.emerald  Mac4Lin_Graphite.emerald  Makefile.am  Mavericks.emerald  Menta.emerald  Metrosuave.emerald  Minimal.emerald  Mirage.emerald  Mu.emerald  Numix.emerald  Numix_Tangoish.emerald  Ocean.emerald  Orangeglass.emerald  (+39 more)
